Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • C cairo
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributor statistics
    • Graph
    • Compare revisions
  • Issues 338
    • Issues 338
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 37
    • Merge requests 37
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • cairo
  • cairo
  • Issues
  • #283
Closed
Open
Issue created Dec 11, 2016 by Bugzilla Migration User@bugzilla-migration

cairo snapshot 1.15.[2,4], win32 backend: assertion (surface->is_clear) failed

Submitted by Gerhard Bräunlich

Assigned to cairo-bugs mailing list

Link to original bug (#99054)

Description

Created attachment 128411 Fix

I cross-compiled cairo-1.15.2 and cairo-1.15.4 for windows. When running a test program, I get the following:

Assertion failed!

File: src/cairo-surface.c, Line 545

Expression: surface->is_clear

abnormal program termination

This happens in cairo_surface_create_similar. Adding a line

new_surf->is_clear = TRUE; at the end of _cairo_win32_display_surface_create_similar in src/win32/cairo-win32-display-surface.c fixes the issue (see patch).

Remark: The particular case occured only for width = 0 in cairo_surface_create_similar. For width > 0 the issue did not happen.

Patch 128411, "Fix":
cairo-win32.patch

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking